--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": " A boilerplate for building static websites ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx eleventy",
+    "dev": "npx eleventy --serve",
+    "debug": "DEBUG=* npx eleventy"
   },
   "repository": {
     "type": "git",
