--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "npx eleventy",
-    "dev": "npx eleventy --serve",
+    "build:css": " postcss css/base.css -o css/style.css -w",
+    "dev": "npm run build:css & npx eleventy --serve",
     "debug": "DEBUG=* npx eleventy"
   },
   "repository": {
@@ -27,6 +28,7 @@
   "homepage": "https://github.com/dandevri/static-site-starter#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.8.3",
-    "postcss-cli": "^6.1.2"
+    "postcss-cli": "^6.1.2",
+    "postcss-import": "^12.0.1"
   }
 }
