--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.8.3",
     "postcss-cli": "^6.1.2",
-    "postcss-import": "^12.0.1"
+    "postcss-import": "^12.0.1",
+    "postcss-nested": "^4.1.2",
+    "postcss-scss": "^2.0.0"
   }
 }
