--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/dandevri/static-site-starter#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.8.3",
+    "autoprefixer": "^9.5.1",
     "postcss-cli": "^6.1.2",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.1.2",
