--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "postcss-cli": "^6.1.2",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.1.2",
-    "postcss-scss": "^2.0.0"
+    "postcss-scss": "^2.0.0",
+    "stylelint-config-standard": "^18.3.0"
+  },
+  "stylelint": {
+    "extends": "stylelint-config-standard"
   }
 }
