--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.8.3",
     "autoprefixer": "^9.5.1",
+    "cssnano": "^4.1.10",
     "postcss-cli": "^6.1.2",
     "postcss-font-magician": "^2.2.1",
     "postcss-import": "^12.0.1",
