--- a/package.json
+++ b/package.json
@@ -33,11 +33,16 @@
     "postcss-cli": "^6.1.2",
     "postcss-font-magician": "^2.2.1",
     "postcss-import": "^12.0.1",
+    "postcss-mixins": "^6.2.1",
     "postcss-nested": "^4.1.2",
     "postcss-scss": "^2.0.0",
+    "postcss-simple-vars": "^5.0.2",
     "stylelint-config-standard": "^18.3.0"
   },
   "stylelint": {
-    "extends": "stylelint-config-standard"
+    "extends": "stylelint-config-standard",
+    "rules": {
+      "at-rule-no-unknown": null
+    }
   }
 }
