--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/dandevri/static-site-starter#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.8.3",
+    "@11ty/eleventy-plugin-rss": "^1.0.6",
     "autoprefixer": "^9.5.1",
     "cssnano": "^4.1.10",
     "imagemin-cli": "^4.0.1",
