--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "postcss-import": "^12.0.1",
     "postcss-mixins": "^6.2.1",
     "postcss-nested": "^4.1.2",
+    "postcss-normalize": "^8.0.0",
     "postcss-scss": "^2.0.0",
     "postcss-simple-vars": "^5.0.2",
     "stylelint-config-standard": "^18.3.0",
