--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx eleventy",
     "build:js": "uglifyjs static/js/script.js -c -o _site/static/js/script.js",
-    "build:js2": "rollup static/js/script.js --file _site/static/js/bundle.js --format iife",
+    "build:js2": "rollup --config",
     "build:webp": "imagemin --plugin=webp static/img/* --out-dir=_site/static/img/",
     "build:img": "imagemin --plugin=mozjpeg --plugin=pngquant --plugin=svgo static/img/* --out-dir=_site/static/img/ & npm run build:webp",
     "build:css": " postcss css/base.css -o css/style.css -w",
