--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "postcss-simple-vars": "^5.0.2",
     "rollup": "^1.16.7",
     "stylelint-config-standard": "^18.3.0",
+    "terser": "^4.1.2",
     "uglify-js": "^3.6.0"
   },
   "stylelint": {
