--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx eleventy",
-    "build:js": "uglifyjs static/js/script.js -c -o _site/static/js/script.js",
-    "build:js2": "rollup --config",
+    "build:js": "rollup --config",
     "build:webp": "imagemin --plugin=webp static/img/* --out-dir=_site/static/img/",
     "build:img": "imagemin --plugin=mozjpeg --plugin=pngquant --plugin=svgo static/img/* --out-dir=_site/static/img/ & npm run build:webp",
     "build:css": " postcss css/base.css -o css/style.css -w",
@@ -50,8 +49,8 @@
     "postcss-scss": "^2.0.0",
     "postcss-simple-vars": "^5.0.2",
     "rollup": "^1.16.7",
+    "rollup-plugin-terser": "^5.1.1",
     "stylelint-config-standard": "^18.3.0",
-    "terser": "^4.1.2",
     "uglify-js": "^3.6.0"
   },
   "stylelint": {
