--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "postcss-scss": "^2.0.0",
     "postcss-simple-vars": "^5.0.2",
     "rollup": "^1.16.7",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.1.1",
     "stylelint-config-standard": "^18.3.0",
     "uglify-js": "^3.6.0"
